# wandering-light

./: .gitignore  README.md  lint.sh  pyproject.toml  pytest.ini  run_e2e_tests.sh  runpod_bootstrap.sh  runpod_post_restart.sh
.github/workflows/: python-package.yml
docs/: progress-2026-04-17-to-04-27.md
notebooks/: proposer_pilot.ipynb
results/20260420_163811/: TrajectorySolver_20260420_163819.json  summary.json
tests/: test_avg_solution_length_mixed.py  test_batch_processing.py  test_common_functions.py  test_create_data.py  test_data_generator.py  test_evaluate_proposer.py  test_evaluate_solver.py  test_evaluate_solver_file.py  test_evaluation_serialization.py  test_executor.py  test_explorer_app.py  test_explorer_tree.py  test_function_def.py  test_function_def_list.py  test_function_def_split.py  test_ground_truth_solve_rate.py  test_induction_dataset.py  test_llm_solver.py  test_llm_utils.py  test_make_data.py  test_proposer_pilot.py  test_random_data_generation.py  test_reward.py  test_rl_grpo_main.py  test_run_evaluation.py  test_run_evaluation_simulation.py  test_solver.py  test_token_statistics.py  test_trained_llm_token_generator.py  test_trajectory.py  test_trajectory_result.py  test_trajectory_serialization.py  test_typed_list.py  test_wandb_run_link.py  test_web_ui_backend_graph_executor.py  test_web_ui_backend_main.py
tests/e2e/: README.md  __init__.py  conftest.py  pytest.ini  setup_e2e.py  test_api_e2e.py  test_helpers.py  test_new_features_e2e.py  test_webapp_e2e.py
tests/test_data/: expected_eval_prompt.txt  expected_eval_prompt_no_available_functions.txt  expected_train_prompt.txt  expected_train_prompt_no_available_functions.txt
wandering_light/: common_functions.py  constants.py  executor.py  function_def.py  llm_utils.py  solver.py  synthesize.py  trajectory.py  typed_list.py
wandering_light/evals/: README_dashboard.md  README_eval_viewer.md  __init__.py  create_data.py  dashboard.py  eval_results_viewer.html  eval_viewer.html  evaluate_proposer.py  evaluate_solver.py  explorer.py  explorer_tree.py  model_eval.py  run_dashboard.py  run_evaluation.py
wandering_light/evals/data/: __init__.py  eval_data_v20250831_160239.py  random_inputs.py  random_inputs_500.py
wandering_light/proposer_pilot/: __init__.py  graph.py  solve_rater.py
wandering_light/training/: callbacks.py  data_generator.py  dual_rl_grpo.py  eval_tokenizer.py  reward.py  rl_grpo.py  rl_grpo_config.py  sft.py  wandb_utils.py
wandering_light/web_ui/: README.md  SOLVER_PLAYGROUND.md  __init__.py  todo.md
wandering_light/web_ui/backend/: __init__.py  graph_executor.py  main.py  requirements.txt
wandering_light/web_ui/frontend/: README.md  install-and-test.sh  package-lock.json  package.json
wandering_light/web_ui/frontend/public/: index.html  manifest.json
wandering_light/web_ui/frontend/src/: App.test.tsx  App.tsx  index.css  setupTests.ts  types.ts
wandering_light/web_ui/frontend/src/components/: GraphEditor.test.tsx  GraphEditor.tsx  Sidebar.test.tsx  Sidebar.tsx  SolverPlayground.tsx
wandering_light/web_ui/frontend/src/components/nodes/: FunctionNode.test.tsx  FunctionNode.tsx  TypedListNode.test.tsx  TypedListNode.tsx
